syntax = "proto2";

option java_package = "io.polycat.catalog.store.protos";
option java_outer_classname = "UserPrivilegeProto";
option java_multiple_files = true;

import "record_metadata_options.proto";

message UserPrivilegeRecord {
  required string user_id = 1;
  required string object_type = 2;
  required string object_id = 3;
  required bool is_owner = 4;
  required int64 privilege = 5;
}

message UserPrivilegeRecordUnion {
  option (com.apple.foundationdb.record.record).usage = UNION;
  required UserPrivilegeRecord user_privilege = 1;
}